fix: rss manage plugin interruption caused by HTTP timeout during geting RSS feed